name:                elysian-common
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Catchouli/elysian-common#readme
license:             BSD3
license-file:        LICENSE
author:              Caitlin Wilks
maintainer:          mitasuki@gmail.com
copyright:           Caitlin Wilks 2017
category:            unknown
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Network.Packets.Client
                     , Network.Packets.Server
  build-depends:       base >= 4.7 && < 5
                     , attoparsec
                     , bytestring
