name:                elysian-server
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Catchouli/elysian-server#readme
license:             BSD3
license-file:        LICENSE
author:              Caitlin Wilks
maintainer:          mitasuki@gmail.com
copyright:           Caitlin Wilks 2017
category:            unknown
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable elysian-server
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , network
                     , mtl
                     , transformers
                     , microlens
                     , microlens-th
                     , microlens-mtl
                     , bytestring
                     , vector
                     , elysian-common
                     , cryptonite
                     , containers
                     , safe-exceptions
